--- a/oap-json-schema/pom.xml
+++ b/oap-json-schema/pom.xml
@@ -34,12 +34,12 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>4.0.21</version>
+        <version>4.0.22</version>
     </parent>
 
     <dependencies>
         <dependency>
-            <groupId>oap</groupId>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>oap-dictionary</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
@@ -49,12 +49,6 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>oap</groupId>
-            <artifactId>oap-application</artifactId>
-            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 </project>
