--- a/maven/oap-dictionary-maven/pom.xml
+++ b/maven/oap-dictionary-maven/pom.xml
@@ -36,12 +36,12 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap-maven-plugin</artifactId>
-        <version>4.0.21</version>
+        <version>4.0.22</version>
     </parent>
 
     <dependencies>
         <dependency>
-            <groupId>oap</groupId>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>oap-dictionary</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
