--- a/oap-logstream/pom.xml
+++ b/oap-logstream/pom.xml
@@ -45,22 +45,22 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>4.0.21</version>
+        <version>4.0.22</version>
     </parent>
 
     <dependencies>
         <dependency>
-            <groupId>oap</groupId>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>oap-stdlib</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
-            <groupId>oap</groupId>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>oap-json</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
-            <groupId>oap</groupId>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>oap-metrics</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
