--- a/oap-remoting-server/pom.xml
+++ b/oap-remoting-server/pom.xml
@@ -33,12 +33,12 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>4.0.21</version>
+        <version>4.0.22</version>
     </parent>
 
     <dependencies>
         <dependency>
-            <groupId>oap</groupId>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>oap-application</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
