--- a/oap-security/oap-security-backend/pom.xml
+++ b/oap-security/oap-security-backend/pom.xml
@@ -33,23 +33,23 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>4.0.21</version>
+        <version>4.0.22</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <dependencies>
         <dependency>
-            <groupId>oap</groupId>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>oap-security-api</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
-            <groupId>oap</groupId>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>oap-storage</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
-            <groupId>oap</groupId>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>oap-dictionary</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
