--- a/oap-ws-cat/pom.xml
+++ b/oap-ws-cat/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <artifactId>oap</artifactId>
         <groupId>oap</groupId>
-        <version>4.0.21</version>
+        <version>4.0.22</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>oap-ws-cat</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>oap</groupId>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>oap-http</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
