--- a/oap-application/src/test/resources/oap/application/KernelTest/modules/m1.conf
+++ b/oap-application/src/test/resources/oap/application/KernelTest/modules/m1.conf
@@ -20,6 +20,7 @@
       name = ServiceOne
       parameters {
         i = 2 ms
+        kernel = "@kernel"
         complex {
           i = 2
           map = {
