Application deprecated. Use @kernel links

--- a/oap-remoting-server/src/main/resources/META-INF/oap-module.yaml
+++ b/oap-remoting-server/src/main/resources/META-INF/oap-module.yaml
@@ -9,6 +9,7 @@ services:
       server: "@service:oap-http-server"
       context: remote
       serialization: DEFAULT
+      kernel: "@kernel"
     supervision:
       supervise: true
 
