--- a/oap-http-useragent/pom.xml
+++ b/oap-http-useragent/pom.xml
@@ -27,15 +27,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <name>oap-alert</name>
-    <artifactId>oap-alert</artifactId>
+    <artifactId>oap-http-useragent</artifactId>
 
     <parent>
-        <groupId>oap</groupId>
         <artifactId>oap</artifactId>
+        <groupId>oap</groupId>
         <version>4.3.1</version>
     </parent>
-
 
     <dependencies>
         <dependency>
@@ -43,18 +41,6 @@
             <artifactId>oap-stdlib</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
-
-        <dependency>
-            <groupId>com.github.rholder</groupId>
-            <artifactId>guava-retrying</artifactId>
-            <version>2.0.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-            <scope>provided</scope>
-        </dependency>
     </dependencies>
+
 </project>
