--- a/oap-logstream/pom.xml
+++ b/oap-logstream/pom.xml
@@ -56,6 +56,11 @@
         </dependency>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
+            <artifactId>oap-dictionary</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>oap-json</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
