--- a/oap-logstream/src/test/resources/test-logconfig/config.v2.conf
+++ b/oap-logstream/src/test/resources/test-logconfig/config.v2.conf
@@ -9,6 +9,7 @@
           id = DATETIME
           type = DATETIME
           default = "1970-01-01T00:00:00.000Z"
+          tags = [LOG]
         }
         {
           id = PARTITIONING_DATE
@@ -21,6 +22,24 @@
           type = STRING
           default = ""
           path = request.id
+          tags = [LOG]
+        }
+        {
+          id = REQUEST_ID2
+          type = STRING
+          default = ""
+          path = request.id2
+          tags = [LOG]
+        }
+      ]
+    }
+    {
+      id = LOG2
+      values = [
+        {
+          id = DATETIME
+          type = DATETIME
+          default = "1970-01-01T00:00:00.000Z"
           tags = [LOG]
         }
         {
