--- a/oap-application-spring/pom.xml
+++ b/oap-application-spring/pom.xml
@@ -49,6 +49,11 @@
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>jsr250-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
