--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
     <packaging>pom</packaging>
     <groupId>oap</groupId>
-    <artifactId>oap</artifactId>
+    <artifactId>oap-jdk11</artifactId>
     <version>4.6.0</version>
 
     <name>oap</name>
