--- a/oap-logstream/pom.xml
+++ b/oap-logstream/pom.xml
@@ -43,8 +43,8 @@
     <artifactId>oap-logstream</artifactId>
 
     <parent>
-        <groupId>oap</groupId>
-        <artifactId>oap-jdk11</artifactId>
+        <groupId>oap-jdk11</groupId>
+        <artifactId>oap</artifactId>
         <version>4.6.0</version>
     </parent>
 
