--- a/maven/oap-maven/pom.xml
+++ b/maven/oap-maven/pom.xml
@@ -32,7 +32,7 @@
     <packaging>maven-plugin</packaging>
 
     <parent>
-        <groupId>oap</groupId>
+        <groupId>oap-jdk11</groupId>
         <artifactId>oap-maven-plugin</artifactId>
         <version>4.6.0</version>
     </parent>
