--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -33,8 +33,8 @@
     <packaging>pom</packaging>
 
     <parent>
-        <groupId>oap</groupId>
-        <artifactId>oap-jdk11</artifactId>
+        <groupId>oap-jdk11</groupId>
+        <artifactId>oap</artifactId>
         <version>4.6.0</version>
     </parent>
 
