--- a/oap-security/oap-security-backend/pom.xml
+++ b/oap-security/oap-security-backend/pom.xml
@@ -31,8 +31,8 @@
     <artifactId>oap-security-backend</artifactId>
 
     <parent>
-        <groupId>oap</groupId>
-        <artifactId>oap-jdk11</artifactId>
+        <groupId>oap-jdk11</groupId>
+        <artifactId>oap</artifactId>
         <version>4.6.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
@@ -63,7 +63,7 @@
 
 
         <dependency>
-            <groupId>oap</groupId>
+            <groupId>oap-jdk11</groupId>
             <artifactId>oap-application</artifactId>
             <version>${project.parent.version}</version>
             <scope>test</scope>
