--- a/oap-security/oap-security-ws/pom.xml
+++ b/oap-security/oap-security-ws/pom.xml
@@ -31,8 +31,8 @@
     <artifactId>oap-security-ws</artifactId>
 
     <parent>
-        <groupId>oap</groupId>
-        <artifactId>oap-jdk11</artifactId>
+        <groupId>oap-jdk11</groupId>
+        <artifactId>oap</artifactId>
         <version>4.6.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
