--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <packaging>pom</packaging>
-    <groupId>oap</groupId>
-    <artifactId>oap-jdk11</artifactId>
+    <groupId>oap-jdk11</groupId>
+    <artifactId>oap</artifactId>
     <version>4.6.0</version>
 
     <name>oap</name>
