--- a/oap-ws/src/main/resources/META-INF/oap-module.yaml
+++ b/oap-ws/src/main/resources/META-INF/oap-module.yaml
@@ -87,3 +87,6 @@ services:
     name: security-interceptor
     profile: "ws-security-mock"
     implementation: oap.ws.security.MockSecurityInterceptor
+
+  ws-log:
+    implementation: oap.ws.LogWS
