--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,9 @@
                         -Dlogback.configurationFile=${session.executionRootDirectory}/oap-stdlib/src/test/resources/logback-test.xml
                     </argLine>
                     <trimStackTrace>false</trimStackTrace>
+                    <!--TODO: remove this ignore once all tests pass
+                         For tests dependent on the external services, make the separate profile to run them
+                         within a specific environment-->
                     <testFailureIgnore>true</testFailureIgnore>
                     <useFile>true</useFile>
                     <disableXmlReport>false</disableXmlReport>
