--- a/oap-metrics/pom.xml
+++ b/oap-metrics/pom.xml
@@ -33,7 +33,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>4.7.14</version>
+        <version>4.7.15</version>
     </parent>
 
     <dependencies>
@@ -44,7 +44,7 @@
         </dependency>
         <dependency>
             <groupId>io.dropwizard.metrics</groupId>
-            <artifactId>metrics-graphite</artifactId>
+            <artifactId>metrics-core</artifactId>
             <version>${metrics.version}</version>
             <exclusions>
                 <exclusion>
@@ -73,6 +73,7 @@
             <artifactId>gson</artifactId>
             <version>2.8.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
