--- a/oap-template/pom.xml
+++ b/oap-template/pom.xml
@@ -33,13 +33,18 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>4.7.24</version>
+        <version>4.7.25</version>
     </parent>
 
     <dependencies>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
             <artifactId>oap-stdlib</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>oap-metrics</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
 
