--- a/oap-http/src/main/resources/META-INF/oap-module.yaml
+++ b/oap-http/src/main/resources/META-INF/oap-module.yaml
@@ -7,6 +7,7 @@ services:
     parameters:
       workers: 500
       registerStatic: false
+      keepAliveTimeout: 5s
     supervision:
       supervise: true
 
