Replace Project version with ${revision} placeholder in all POM files.
It allows to change project version in one place only.
Bump up OAP project version to 4.8.1

--- a/oap-dictionary/pom.xml
+++ b/oap-dictionary/pom.xml
@@ -34,7 +34,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>4.8.0</version>
+        <version>${revision}</version>
     </parent>
 
     <dependencies>
