--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -35,7 +35,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>4.8.0</version>
+        <version>${revision}</version>
     </parent>
 
     <modules>
