--- a/oap-http/pom.xml
+++ b/oap-http/pom.xml
@@ -32,7 +32,7 @@
     <parent>
         <artifactId>oap</artifactId>
         <groupId>oap</groupId>
-        <version>4.8.0</version>
+        <version>${revision}</version>
     </parent>
     <dependencies>
         <dependency>
