--- a/oap-logstream/pom.xml
+++ b/oap-logstream/pom.xml
@@ -41,7 +41,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>4.8.0</version>
+        <version>${revision}</version>
     </parent>
 
     <dependencies>
