--- a/oap-ws-sso/oap-sso/pom.xml
+++ b/oap-ws-sso/oap-sso/pom.xml
@@ -32,7 +32,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>4.8.0</version>
+        <version>${revision}</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
