--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <packaging>pom</packaging>
     <groupId>oap</groupId>
     <artifactId>oap</artifactId>
-    <version>4.8.0</version>
+    <version>${revision}</version>
 
     <name>oap</name>
 
@@ -84,6 +84,7 @@
     </distributionManagement>
 
     <properties>
+        <revision>4.8.1</revision>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
 
