--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
     </distributionManagement>
 
     <properties>
-        <revision>4.8.5</revision>
+        <revision>4.9.0</revision>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
 
@@ -92,14 +92,14 @@
         <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
 
         <testng.version>6.11</testng.version>
-        <assertj.version>3.11.1</assertj.version>
-        <guava.version>21.0</guava.version>
+        <assertj.version>3.12.2</assertj.version>
+        <guava.version>27.1-jre</guava.version>
         <logback.version>1.2.3</logback.version>
         <slf4j.version>1.7.21</slf4j.version>
-        <httpcomponents.version>4.4.10</httpcomponents.version>
+        <httpcomponents.version>4.4.11</httpcomponents.version>
         <apache.commons.text.version>1.6</apache.commons.text.version>
         <compress.version>1.18</compress.version>
-        <joda.version>2.10</joda.version>
+        <joda.version>2.10.1</joda.version>
         <metrics.version>4.0.5</metrics.version>
         <jackson.version>2.9.8</jackson.version>
         <lombok.version>1.18.6</lombok.version>
