--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -128,6 +128,12 @@
             <version>3.2.0</version>
         </dependency>
         <dependency>
+            <groupId>com.github.chrisvest</groupId>
+            <artifactId>stormpot</artifactId>
+            <version>2.4.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>${testng.version}</version>
