--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
     </distributionManagement>
 
     <properties>
-        <revision>4.9.10</revision>
+        <revision>4.9.11</revision>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
 
@@ -164,7 +164,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin> <!--It is necessary for Install/Deploy artifacts by using maven setup with ${revision} placeholder-->
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>flatten-maven-plugin</artifactId>
                 <version>1.1.0</version>
