--- a/oap-metrics/pom.xml
+++ b/oap-metrics/pom.xml
@@ -54,6 +54,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.hdrhistogram</groupId>
+            <artifactId>HdrHistogram</artifactId>
+            <version>2.1.11</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.vladimir-bukhtoyarov</groupId>
             <artifactId>rolling-metrics</artifactId>
             <version>2.0.3</version>
