--- a/oap-metrics/pom.xml
+++ b/oap-metrics/pom.xml
@@ -60,8 +60,13 @@
         </dependency>
         <dependency>
             <groupId>com.github.vladimir-bukhtoyarov</groupId>
-            <artifactId>rolling-metrics</artifactId>
-            <version>2.0.3</version>
+            <artifactId>rolling-metrics-core</artifactId>
+            <version>3.0.0-RC4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.vladimir-bukhtoyarov</groupId>
+            <artifactId>rolling-metrics-dropwizard</artifactId>
+            <version>3.0.0-RC4</version>
         </dependency>
         <dependency>
             <groupId>org.influxdb</groupId>
