--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -160,9 +160,9 @@
             <version>${assertj.version}</version>
         </dependency>
         <dependency>
-            <groupId>net.jpountz.lz4</groupId>
-            <artifactId>lz4</artifactId>
-            <version>1.3.0</version>
+            <groupId>org.lz4</groupId>
+            <artifactId>lz4-java</artifactId>
+            <version>1.6.0</version>
         </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
@@ -176,7 +176,6 @@
             </exclusions>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.github.stephenc/jamm -->
         <dependency>
             <groupId>com.github.stephenc</groupId>
             <artifactId>jamm</artifactId>
