fix: logger headers

--- a/oap-logstream/src/test/resources/test-logconfig/config.v2.conf
+++ b/oap-logstream/src/test/resources/test-logconfig/config.v2.conf
@@ -10,6 +10,7 @@
           type = DATETIME
           default = "1970-01-01T00:00:00.000Z"
           tags = [LOG]
+          path = date
         }
         {
           id = PARTITIONING_DATE
