--- a/oap-logstream/src/test/resources/test-logconfig/config.v1.conf
+++ b/oap-logstream/src/test/resources/test-logconfig/config.v1.conf
@@ -9,6 +9,7 @@
           id = DATETIME
           type = DATETIME
           default = "1970-01-01T00:00:00.000Z"
+          path = date
         }
         {
           id = PARTITIONING_DATE
@@ -21,6 +22,12 @@
           type = STRING
           default = ""
           path = request.id
+          tags = [LOG]
+        }
+        {
+          id = REQUEST_ID2
+          type = STRING
+          default = ""
           tags = [LOG]
         }
       ]
