--- a/oap-logstream/src/test/resources/test-logconfig/config.v2.conf
+++ b/oap-logstream/src/test/resources/test-logconfig/config.v2.conf
@@ -42,6 +42,7 @@
           type = DATETIME
           default = "1970-01-01T00:00:00.000Z"
           tags = [LOG]
+          path = date
         }
         {
           id = REQUEST_ID2
