update http add: ByteArrayOutputStreamPool

--- a/oap-http/src/main/resources/META-INF/oap-module.yaml
+++ b/oap-http/src/main/resources/META-INF/oap-module.yaml
@@ -8,5 +8,7 @@ services:
       workers: 500
       registerStatic: false
       keepAliveTimeout: 5s
+      originalServer: "OAP Server/4.0"
+      responseDate: true
     supervision:
       supervise: true
