[DD-256] Fix empty header, empty first line in json log files

--- a/oap-logstream/src/test/resources/test-logconfig/config.v3.conf
+++ b/oap-logstream/src/test/resources/test-logconfig/config.v3.conf
@@ -4,15 +4,7 @@
   values = [
     {
       id = JSON
-      values = [
-        {
-          id = REQUEST
-          type = STRING
-          default = ""
-          path = request
-          tags = [JSON, LOG]
-        }
-      ]
+      type = JSON
     }
   ]
 }
