ws reworked, session support added (sso might be broken since no test, fixing)

--- a/oap-ws/src/test/resources/oap/ws/interceptor/ws-interceptors.conf
+++ b/oap-ws/src/test/resources/oap/ws/interceptor/ws-interceptors.conf
@@ -7,5 +7,5 @@
       sessionAware = true
     }
   }
-  interceptors = [empty-interceptor, error-interceptor]
+  interceptors = [pass-interceptor, error-interceptor]
 }
