--- a/oap-ws-sso/oap-ws-sso/pom.xml
+++ b/oap-ws-sso/oap-ws-sso/pom.xml
@@ -40,7 +40,7 @@
     <dependencies>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
-            <artifactId>oap-sso</artifactId>
+            <artifactId>oap-ws-sso-api</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
