--- a/oap-json/src/test/resources/META-INF/json-ext2.properties
+++ b/oap-json/src/test/resources/META-INF/json-ext2.properties
@@ -21,4 +21,4 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-oap.json.ext.ExtDeserializerTest$Bean$BeanExt=oap.json.ext.ExtDeserializerTest$TestExt
+oap.json.ext.ExtDeserializer2Test$Bean#ext=oap.json.ext.ExtDeserializer2Test$TestExt
