Ext via generic interface is main implementation

--- a/oap-json/src/test/resources/META-INF/json-ext.properties
+++ b/oap-json/src/test/resources/META-INF/json-ext.properties
@@ -21,4 +21,4 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-oap.json.ext.ExtDeserializerTest$Bean$BeanExt=oap.json.ext.ExtDeserializerTest$TestExt
+oap.json.ext.ClassLocalExtDeserializerTest$Bean$BeanExt=oap.json.ext.ClassLocalExtDeserializerTest$TestExt
