fix: dictionary serialization

--- a/oap-dictionary/src/test/resources/dictionary/test-dictionary.conf
+++ b/oap-dictionary/src/test/resources/dictionary/test-dictionary.conf
@@ -5,15 +5,15 @@
     {
       "id": "id1",
       "title": "title1",
-      "enabled": true,
+      enabled = true
       eid = "1"
-      "values": [
+      values = [
         {
           "id": "id11",
           "title": "title11",
           "enabled": true,
           "eid": 11
-        },
+        }
         {
           "id": "id12",
           "title": "title12",
@@ -21,13 +21,14 @@
           "eid": 12
         }
       ]
-    },
+    }
     {
       "id": "id2",
       "title": "title2",
-      "enabled": true,
-      "eid": "2"
-    },
+      enabled =true
+      eid = "2"
+      property1 = val1
+    }
     {
       "id": "id3",
       "enabled": true,
