--- a/oap-json/pom.xml
+++ b/oap-json/pom.xml
@@ -171,7 +171,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.0</version>
+            <version>${gson.version}</version>
         </dependency>
     </dependencies>
 </project>
