--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
     </distributionManagement>
 
     <properties>
-        <revision>4.24.8</revision>
+        <revision>4.24.9</revision>
 
         <maven.compiler.source>12</maven.compiler.source>
         <maven.compiler.target>12</maven.compiler.target>
@@ -95,6 +95,7 @@
         <reflections.version>0.9.11</reflections.version>
         <jamm.version>0.2.5</jamm.version>
         <springframework.version>2.1.3.RELEASE</springframework.version>
+        <gson.version>2.8.5</gson.version>
     </properties>
 
     <build>
