--- a/oap-stdlib/src/test/resources/oap/application/remote/RemotingTest/module.conf
+++ b/oap-stdlib/src/test/resources/oap/application/remote/RemotingTest/module.conf
@@ -1,6 +1,6 @@
 
 name = "oap-module-with-remoting"
-dependsOn = ["oap-remoting-server"]
+dependsOn = ["oap"]
 
 services {
   remote-service-impl1 {
