--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,8 @@
 
     <modules>
         <module>oap-stdlib</module>
-        <module>oap-stdlib-java8</module>
+<!--        @TODO create separate maven for java 8-->
+<!--        <module>oap-stdlib-java8</module>-->
         <module>oap-application-spring</module>
         <module>oap-alert-slack</module>
         <module>oap-zabbix</module>
