--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -53,6 +53,13 @@
                 <configuration>
                     <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.ow2.asm</groupId>
+                        <artifactId>asm</artifactId>
+                        <version>7.2</version>
+                    </dependency>
+                </dependencies>
                 <executions>
                     <execution>
                         <id>mojo-descriptor</id>
