--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,10 @@
             <id>jitpack</id>
             <url>https://jitpack.io</url>
         </repository>
+        <repository>
+            <id>projectlombok.org</id>
+            <url>https://projectlombok.org/edge-releases</url>
+        </repository>
     </repositories>
 
     <distributionManagement>
@@ -60,7 +64,7 @@
     </distributionManagement>
 
     <properties>
-        <revision>6.0.1</revision>
+        <revision>6.0.2</revision>
 
         <maven.compiler.source>13</maven.compiler.source>
         <maven.compiler.target>13</maven.compiler.target>
@@ -80,7 +84,7 @@
         <joda.version>2.10.1</joda.version>
         <metrics.version>4.1.0</metrics.version>
         <jackson.version>2.9.8</jackson.version>
-        <lombok.version>1.18.8</lombok.version>
+        <lombok.version>edge-SNAPSHOT</lombok.version>
         <reflections.version>0.9.11</reflections.version>
         <jamm.version>0.3.3</jamm.version>
         <springframework.version>2.1.3.RELEASE</springframework.version>
