--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <module>oap-application-spring</module>
         <module>oap-alert-slack</module>
         <module>oap-zabbix</module>
+        <module>oap-fs</module>
         <module>maven</module>
     </modules>
 
@@ -64,7 +65,7 @@
     </distributionManagement>
 
     <properties>
-        <revision>6.2.0</revision>
+        <revision>6.3.0</revision>
 
         <maven.compiler.source>13</maven.compiler.source>
         <maven.compiler.target>13</maven.compiler.target>
