--- a/maven/oap-dictionary-maven/pom.xml
+++ b/maven/oap-dictionary-maven/pom.xml
@@ -36,7 +36,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap-maven-plugin</artifactId>
-        <version>${revision}</version>
+        <version>${project.revision}</version>
     </parent>
 
     <dependencies>
