--- a/oap-alert-slack/pom.xml
+++ b/oap-alert-slack/pom.xml
@@ -33,7 +33,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>${revision}</version>
+        <version>${project.revision}</version>
     </parent>
 
 
