--- a/oap-fs/pom.xml
+++ b/oap-fs/pom.xml
@@ -31,7 +31,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>${revision}</version>
+        <version>${project.revision}</version>
     </parent>
 
     <artifactId>oap-fs</artifactId>
