add: prometheus jvm threads metrics

--- a/oap-stdlib/src/main/resources/META-INF/oap-module.yaml
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.yaml
@@ -41,5 +41,6 @@ services:
       enableJvmMemoryMetrics: true
       enableJvmGcMetrics: true
       enableLogbackMetrics: true
+      enableJvmThreadMetrics: true
     supervision:
       supervise: true
