--- a/oap-stdlib/src/test/resources/oap/application/KernelTest/modules/lifecycle.yaml
+++ b/oap-stdlib/src/test/resources/oap/application/KernelTest/modules/lifecycle.yaml
@@ -1,4 +1,17 @@
 name: lifecycle
 services:
-  test:
+  service:
     implementation: "oap.application.KernelTest$TestLifecycle"
+    supervision:
+      supervise: true
+  thread:
+    implementation: "oap.application.KernelTest$TestLifecycle"
+    supervision:
+      supervise: true
+      thread: true
+  delayScheduled:
+    implementation: "oap.application.KernelTest$TestLifecycle"
+    supervision:
+      supervise: true
+      schedule: true
+      delay: 1h
