--- a/pom.xml
+++ b/pom.xml
@@ -57,10 +57,6 @@
             <id>jitpack</id>
             <url>https://jitpack.io</url>
         </repository>
-        <repository>
-            <id>projectlombok.org</id>
-            <url>https://projectlombok.org/edge-releases</url>
-        </repository>
     </repositories>
 
     <properties>
@@ -76,7 +72,7 @@
         <compress.version>1.19</compress.version>
         <joda.version>2.10.5</joda.version>
         <jackson.version>2.10.1</jackson.version>
-        <lombok.version>edge-SNAPSHOT</lombok.version>
+        <lombok.version>1.18.12</lombok.version>
         <reflections.version>0.9.11</reflections.version>
         <jamm.version>0.3.3</jamm.version>
         <springframework.version>2.1.3.RELEASE</springframework.version>
