add: prometheus-application-info-exporter

--- a/oap-stdlib/src/main/resources/META-INF/oap-module.yaml
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.yaml
@@ -44,3 +44,8 @@ services:
       enableJvmThreadMetrics: true
     supervision:
       supervise: true
+
+  prometheus-application-info-exporter:
+    implementation: oap.prometheus.PrometheusApplicationInfoExporter
+    supervision:
+      supervise: true
