--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -407,6 +407,12 @@
             <artifactId>guava-retrying</artifactId>
             <version>2.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.undertow</groupId>
+            <artifactId>undertow-core</artifactId>
+            <version>${undertow.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.mock-server</groupId>
