--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
     </repositories>
 
     <properties>
-        <project.revision>6.5.8</project.revision>
+        <project.revision>6.6.0</project.revision>
 
         <testng.version>7.1.0</testng.version>
         <assertj.version>3.15.0</assertj.version>
@@ -78,5 +78,6 @@
         <springframework.version>2.1.3.RELEASE</springframework.version>
         <gson.version>2.8.6</gson.version>
         <micrometer.version>1.3.6</micrometer.version>
+        <undertow.version>2.0.30.Final</undertow.version>
     </properties>
 </project>
