--- a/maven/oap-maven/pom.xml
+++ b/maven/oap-maven/pom.xml
@@ -34,7 +34,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap-maven-plugin</artifactId>
-        <version>${project.revision}</version>
+        <version>${oap.project.version}</version>
     </parent>
 
     <dependencies>
